--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -2,7 +2,7 @@
 $primary-color: #f50303;
 $secondary-color: #ffb26a;
 
-$white-color: #fff;
+$white-color: rgb(255, 249, 246);
 
 $dark-grey: #333333;
 
