--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,10 +1,10 @@
 // COLORS
-$primary-color: #f50303;
-$secondary-color: #ffb26a;
+$primary-color: #3b5c77;
+$secondary-color: #353535;
 
-$white-color: rgb(255, 249, 246);
+$white-color: rgb(255, 255, 255);
 
-$dark-grey: #333333;
+$dark-grey: #003849;
 
 $dark-blue-text: #272341; // For Headings
 
